--- a/src/app/components/DobraInterstitialCiencia/DobraInterstitialCiencia.module.css
+++ b/src/app/components/DobraInterstitialCiencia/DobraInterstitialCiencia.module.css
@@ -119,7 +119,7 @@
 
 .highlightText {
     /* --- MUDANÇA: Cor Dourada para a parte destacada (mantido) --- */
-    color: var(--color-dourado);
+    color:#193355;
     /* ----------------------------------------------------------- */
 }
 
